--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
             <p>Contact</p>
             <p class="strike">&#9</p>
         </div> -->
-    <div class="motto">
-        <p></p>
-        <p id="m1"><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
-        <p id="m2"><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
-        <p id="m3"><span class='foodis'>Food is </span><span class='colord'>Social Justice.</span></p>
-        <p></p>
-    </div>
+
     <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -111,7 +105,15 @@
      barn-gradient-fill 
      barn-gradient
     fall-gradient
-    -->
+    --><div class="text-center col-md-12">
+    <img class="img-fluid mb-3" src="../img/splashimg.jpg"></div>
+    <div class="motto">
+        <p></p>
+        <p id="m1"><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
+        <p id="m2"><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
+        <p id="m3"><span class='foodis'>Food is </span><span class='colord'>Social Justice.</span></p>
+        <p></p>
+    </div>
 
     <div class="top-blurb body-text just-txt">Firefly Farm launched a commercial growing operation in 2015 with tomatoes
         and a
