--- a/services.html
+++ b/services.html
@@ -119,7 +119,7 @@
                 grant application process. Our dedicated crew will build your tunnel on site and offer consultation for
                 crop planning to make the most of your new extended season!</p>
         </div>
-        <div class="c3"><img class="plantsale" src="../img/hoophouse.jpg"></div>
+        <div class="c3"><img class="plantsale" src="../img/cattunnels.jpg"></div>
         <div class="c4"></div>
     </div>
     <div class="secthead m-5" align="center">
