--- a/shop.html
+++ b/shop.html
@@ -37,14 +37,64 @@
             <p>Contact</p>
             <p class="strike">&#9</p>
         </div> -->
-    <div class="motto">
+   <!-- MOTTO  <div class="motto">
         <p></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Social Justice.</span></p>
         <p></p>
     </div>
-    <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
+--->
+
+    <!-- beggingni of current navbar -->
+
+       <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
+    <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="Menu-Btn">Menu</span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mr-2 mt-2">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#!">Shop</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#!" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
+                        <a class="dropdown-item"
+                            href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"
+                            target="_blank" rel="noopener noreferrer">Rise</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
+                        <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contactform/formpage.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="page-divider" style="display:none"></div>
+
+    <!-- end of current navbar -->
+    <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# --><!-- PREV VESION
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -87,7 +137,7 @@
             </ul>
         </div>
     </nav>
-    <div class="page-divider" style="display:none;"></div>
+    <div class="page-divider" style="display:none;"></div> END OF PREV VERS  -->
     <!-- end of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
     <!-- <div class="main-photo"><img src="../img/mainphoto.jpg"></div> -->
     <!-- carousel - does not center image or move through images -->
