--- a/events.html
+++ b/events.html
@@ -164,12 +164,14 @@
         </div>
         <div class="c3"><img class="plantsale sqr" src="../img/plant-sale.jpg"></div>
     </div>
-    <div class="secthead m-5" id="fttdinner" align="center">
-        summer farm-to-table dinners
-    </div>
+    
     <div class="row2">
+        
         <div class="c1"><img src="../img/fttdinner.jpg"></div>
         <div class="c2 m-4">
+            <div class="secthead inside-secthead inside-secthead-right" id="fttdinner" align="center">
+                summer farm-to-table dinners
+            </div>
             <p class="just-txt body-text">Farm-to-table dinners have been held here in our barns since 2016 to rave
                 reviews. We source fruits and vegetables from our own farm and supplement with ingredients from other
                 local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced
@@ -203,7 +205,7 @@
     </div>
 
     <!-- Begin Soc. Media Banner -->
-    <h1 id="grow">grow with Firefly Farm online</h1>
+    <!-- <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
@@ -238,9 +240,9 @@
                 <path
                     d="M422.6 193.6c-5.3-45.3-23.3-51.6-59-54 -50.8-3.5-164.3-3.5-215.1 0 -35.7 2.4-53.7 8.7-59 54 -4 33.6-4 91.1 0 124.8 5.3 45.3 23.3 51.6 59 54 50.9 3.5 164.3 3.5 215.1 0 35.7-2.4 53.7-8.7 59-54C426.6 284.8 426.6 227.3 422.6 193.6zM222.2 303.4v-94.6l90.7 47.3L222.2 303.4z">
                 </path>
-            </svg></a></div>
+            </svg></a></div> -->
 
-            <!-- end cos media banner -->
+            <!-- end Soc. media banner -->
 
     <!-- Begin Mailchimp Signup Form -->
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
