Completed Events Sectioning
Completed events sectioning

--- a/events.html
+++ b/events.html
@@ -154,7 +154,7 @@
             <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
                 spring plant sale
             </div>
-            <p class="just-txt body-text row-text">
+            <p class="just-txt body-text row-text row-text-left">
                 With Spring comes growth, plant sales are fun and we are going to sell you plants!
                 Grow fresh and local tomato plants, herbs, and flowers in your home gardens. These starters will make it
                 easy for you to host your own garden-to-table dinners in no time. Come by and talk to other home
@@ -168,11 +168,11 @@
     <div class="row2">
         
         <div class="c1"><img src="../img/fttdinner.jpg"></div>
-        <div class="c2 m-4">
+        <div class="c2 centered">
             <div class="secthead inside-secthead inside-secthead-right" id="fttdinner" align="center">
                 summer farm-to-table dinners
             </div>
-            <p class="just-txt body-text">Farm-to-table dinners have been held here in our barns since 2016 to rave
+            <p class="just-txt body-text row-text row-text-right">Farm-to-table dinners have been held here in our barns since 2016 to rave
                 reviews. We source fruits and vegetables from our own farm and supplement with ingredients from other
                 local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced
                 ingredients into one-of-a-kind, five-course meals. We pair these courses with the best of locally-made
@@ -180,13 +180,14 @@
                 learn about upcoming events.</p>
         </div>
     </div>
-    <div class="secthead m-5" id="fallfest" align="center">
-        fall leaf festival
-    </div>
+
     <div class="row3">
         <div class="c3"><img class="fttpic" src="../img/leaves.jpg"></div>
         <div class="c1 m-4">
-            <p class="just-txt body-text">Did you know that yard waste, like leaves and trimmings, makes up almost 13%
+            <div class="secthead inside-secthead inside-secthead-left" id="fallfest" align="center">
+                fall leaf festival
+            </div>
+            <p class="just-txt body-text row-text row-text-left">Did you know that yard waste, like leaves and trimmings, makes up almost 13%
                 of landfill waste? During our last Fall leaf drive we put the call out to all our friends and neighbors
                 to help divert some of that organic waste, and help build our soil fertility through our compost
                 program. We were thrilled by the popularity of this idea and were quickly overwhelmed with donations!
