Section heading and formating regulation
made all menus correct,
made all pages use row/section nomenclature

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
                         aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item"
-                            href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"
-                            target="_blank" rel="noopener noreferrer">Rise</a>
+                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+                        <a class="dropdown-item" href="rise.html">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -105,8 +104,10 @@
      barn-gradient-fill 
      barn-gradient
     fall-gradient
-    --><div class="text-center col-md-12">
-    <img class="img-fluid mb-3" src="../img/splashimg.jpg"></div>
+    -->
+    <div class="text-center col-md-12">
+        <img class="img-fluid mb-3" src="../img/splashimg.jpg">
+    </div>
     <div class="motto">
         <p></p>
         <p id="m1"><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
@@ -123,12 +124,13 @@
         restaurants partners. While heirloom tomatoes are still at the heart of our business, we now grow a variety
         of crops in four seasons.
     </div>
-    <div class="secthead m-5" align="center">
-        a word about how we grow
-    </div>
+
     <div class="row1">
-        <div class="c1"></div>
+
         <div class="c2 mt-5 centered" align="center">
+            <div class="secthead inside-secthead inside-secthead-left" align="center">
+                a word about how we grow
+            </div>
             <p class="just-txt sect-body-left">
                 We care a lot about how food tastes, so we scour the market to find the most delicious fruit and
                 vegetable varieties to grow. Whenever we can, we grow from organic, heirloom seeds and root stock. We
@@ -145,7 +147,7 @@
             <p>owner/operator</p>
         </div>
         <div class="c3"><img class="headshot" src="../img/leah-headshot.jpg"></div>
-        <div class="c4"></div>
+
     </div>
     <div class="row2">
         <div class="c1"><img src="../img/peppers.jpg"></div>
