--- a/rise.html
+++ b/rise.html
@@ -63,11 +63,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Our Farms</a>
+                        aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="#!">Firefly</a>
-                        <a class="dropdown-item" href="#crew">Our Crew</a>
-                        <a class="dropdown-item" href="rise.html">Rise</a>
+                        <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
+                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+                        <a class="dropdown-item" href="#!">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -107,13 +107,11 @@
     </div> -->
 
 
-    <div class="body-text just-txt">A family farm for more than 100 years, Firefly shares earth's abundance with Wichita
-        and
-        surrounding communities. Originally purchased by Robert and Violet Garcia in 1950, it is more than just a
-        heavenly home. Firefly Farm proudly supports the local food community and sustainable food production.<br>
-        <br>Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and
-        farm-to-table dinners throughout the year. Follow along on social media or join the e-newsletter list for
-        up-to-date info on all that's going on at Firefly Farm.
+    <div class="body-text just-txt">Here we have some text about how excited we are to be partnering with Fidelity on
+        Rise Farm. Here we have some text about how excited we are to be partnering with Fidelity on Rise Farm. Here we
+        have some text about how excited we are to be partnering with Fidelity on Rise Farm. Here we have some text
+        about how excited we are to be partnering with Fidelity on Rise Farm. Here we have some text about how excited
+        we are to be partnering with Fidelity on Rise Farm.
     </div>
 
     <div class="row1">
@@ -134,7 +132,7 @@
 
             </p>
         </div>
-        <div class="c3"><img class="plantsale sqr" src="../img/plant-sale.jpg"></div>
+        <div class="c3"><img class="plantsale sqr" src="../img/rise-replace.jpg"></div>
     </div>
     <div class="row2">
 
@@ -152,10 +150,7 @@
                 any ideas..</p>
         </div>
     </div>
-    <div class="secthead" id="crew">Down here these bios going to a new page, yea?</div>
-    <div class="body-text mt-3"> Or, it could be a section on the 21st Farm's page, see the menu bar from the home page.
-        Like, go back to home and click the dropdown button for "our Crew"
-    </div>
+    <div class="secthead">Down here these bios going to a new page, yea?</div>
     <div class="container1">
         <div class="col1 colbio">
             <div class="secthead m-5 lhead" align="center">
