--- a/services.html
+++ b/services.html
@@ -18,6 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles_services.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_events.css?v=1.0">
 
 </head>
 
@@ -38,13 +39,13 @@
             <p>Contact</p>
             <p class="strike">&#9</p>
         </div> -->
-    <div class="motto">
+    <!-- <div class="motto">
         <p></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Social Justice.</span></p>
         <p></p>
-    </div>
+    </div> -->
     <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -62,12 +63,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Our Farms</a>
+                        aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item"
-                            href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"
-                            target="_blank" rel="noopener noreferrer">Rise</a>
+                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+                        <a class="dropdown-item" href="rise.html">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -88,7 +88,7 @@
             </ul>
         </div>
     </nav>
-    <div class="page-divider" style></div>
+    <div class="page-divider" style="display:none"></div>
     <!-- end of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
     <!-- <div class="main-photo"><img src="../img/mainphoto.jpg"></div> -->
     <!-- carousel - does not center image or move through images -->
@@ -107,13 +107,15 @@
     </div> -->
 
 
-    <div class="secthead m-5" align="center">
-        hoop house design & build
-    </div>
+
     <div class="row1">
-        <div class="c1"></div>
         <div class="c2" align="center">
-            <p class="just-txt body-text">If you are looking to expand your growing season, or get a jump on summer
+            <div class="secthead inside-secthead inside-secthead-left" align="center">
+                hoop house design & build
+            </div>
+            <p class="just-txt body-text row-text row-text-left">If you are looking to expand your growing season, or
+                get a jump on
+                summer
                 crops, season extension though high tunnels or hoop houses is a great place to start. We can design and
                 source a structure to fit your space and needs. Let us help you find grant sources and navigate the
                 grant application process. Our dedicated crew will build your tunnel on site and offer consultation for
@@ -122,13 +124,16 @@
         <div class="c3"><img class="plantsale" src="../img/cattunnels.jpg"></div>
         <div class="c4"></div>
     </div>
-    <div class="secthead m-5" align="center">
-        consulting
-    </div>
+
     <div class="row2">
         <div class="c1"><img src="../img/consulting.jpg"></div>
         <div class="c2">
-            <p class="just-txt body-text">Whether you're looking to diversify your produce offering, begin a new u-pick
+            <div class="secthead inside-secthead inside-secthead-right" align="center">
+                consulting
+            </div>
+            <p class="just-txt body-text row-text row-text-right">Whether you're looking to diversify your produce
+                offering, begin a
+                new u-pick
                 blueberry patch or community garden, let us help you plan, price or implement your vision. For more
                 information on we can help you begin or streamline your farm processes, fill out the contact form below
                 and tell us a little about what you’re looking for!</p>
