--- a/shop.html
+++ b/shop.html
@@ -37,7 +37,7 @@
             <p>Contact</p>
             <p class="strike">&#9</p>
         </div> -->
-   <!-- MOTTO  <div class="motto">
+    <!-- MOTTO  <div class="motto">
         <p></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
@@ -48,7 +48,7 @@
 
     <!-- beggingni of current navbar -->
 
-       <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
+    <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -58,19 +58,18 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#!">Shop</a>
+                    <a class="nav-link" href="#!">Shop <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#!" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item"
-                            href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"
-                            target="_blank" rel="noopener noreferrer">Rise</a>
+                        <a class="dropdown-item" href="21ststfarm.html#crew">Our Crew</a>
+                        <a class="dropdown-item" href="rise.html">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -94,7 +93,8 @@
     <div class="page-divider" style="display:none"></div>
 
     <!-- end of current navbar -->
-    <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# --><!-- PREV VESION
+    <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
+    <!-- PREV VESION
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
