--- a/contactform/formpage.html
+++ b/contactform/formpage.html
@@ -63,12 +63,14 @@
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="/../21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/" target="_blank" rel="noopener noreferrer">Rise</a>
+                        <a class="dropdown-item" href="/../21ststfarm.html#crew">Our Crew</a>
+                        <a class="dropdown-item" href="/../rise.html">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
+                    <a class="nav-link" href="/../events.html" id="dropdown10" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false"
+                        onclick="window.location.href='/../events.html';">Events</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="/../events.html#plantsale">Spring Plant Sale</a>
                         <a class="dropdown-item" href="/../events.html#fttdinner">Summer Farm-to-Table Dinners</a>
