--- a/events.html
+++ b/events.html
@@ -164,7 +164,7 @@
         </div>
         <div class="c3"><img class="plantsale sqr" src="../img/plant-sale.jpg"></div>
     </div>
-    
+    <div class="row1-5"></div>
     <div class="row2">
         
         <div class="c1"><img src="../img/fttdinner.jpg"></div>
