Sunday Sprint Changes
Updated copy changing formats etc.

--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -17,8 +17,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles_21ststfarm.css?v=1.0">
-    <link rel="stylesheet" href="css/styles_events.css?v=1.0">
+        <link rel="stylesheet" href="css/styles_events.css?v=1.0">
+        <link rel="stylesheet" href="css/styles_21ststfarm.css?v=1.0">
+
 
 </head>
 
@@ -107,36 +108,30 @@
     </div> -->
 
 
-    <div class="body-text just-txt">A family farm for more than 100 years, Firefly shares earth's abundance with Wichita
-        and
-        surrounding communities. Originally purchased by Robert and Violet Garcia in 1950, it is more than just a
-        heavenly home. Firefly Farm proudly supports the local food community and sustainable food production.<br>
-        <br>Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and
-        farm-to-table dinners throughout the year. Follow along on social media or join the e-newsletter list for
-        up-to-date info on all that's going on at Firefly Farm.
+    <div class="body-text just-txt">Firefly Farm is a 5-acre regenerative farmstead located just inside east Wichita. A family farm site for over 100 years, Firefly Farm has been in the Garcia family since originally purchased by Robert and Violet Garcia in 1950. A commercial farm since 2015, the land has seen many iterations and events -- a world-class motorcycle shop and a barn leveled by a tornado to name just a few!
+
+        
+        
     </div>
 
     <div class="row1">
 
         <div class="c2 centered" align="center">
             <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
-                What is this section?
+                What is this section? But real
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                What is going here? Give me any ideas.
-                What is going here? Give me any ideas.Firefly Farm proudly supports the local food community and
-                sustainable food production.<br>
-                <br>Grateful to be a place beloved by many,What is going here? Give me any ideas.What is going here?
-                Give me
-                any ideas.
-                What is going here? Give me any ideas.What is going here? Give me any ideas.What is going here? Give me
-                any ideas.
+                    Firefly is proud to share the Earth’s abundance with our Wichita community and beyond. We believe that by following nature’s lead and nurturing the health and ecology of the soil, we thereby promote our own health and happiness. Using organic and regenerative practices in all we do, we seek out the most delicious and nutritious varieties to bring to our community and local food system.
+                <br><br>
+                    As much as possible we love to support biodiverse and sustainable agriculture using dozens of heirloom seed and rootstock varieties for our produce. Through our partnership with Tallgrass Hemp & Cannabis we are excited to contribute to the research and resurgence of hemp, Kansas’ newest and oldest fiber, grain and food crop.
+        <br><br>
+        Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and farm-to-table dinners throughout the year. Follow along on social media or join the e-newsletter list for up-to-date info on all that's growing at Firefly Farm.
 
             </p>
         </div>
-        <div class="c3"><img class="plantsale sqr" src="../img/plant-sale.jpg"></div>
+        <div class="c3"><img class="plantsale sqr" src="../img/mainphotocrop.jpg"></div>
     </div>
-    <div class="row2">
+    <!-- <div class="row2">
 
         <div class="c1"><img src="../img/fttdinner.jpg"></div>
         <div class="c2 centered">
@@ -151,17 +146,30 @@
                 What is going here? Give me any ideas.What is going here? Give me any ideas.What is going here? Give me
                 any ideas..</p>
         </div>
-    </div>
-    <div class="secthead" id="crew">Down here these bios going to a new page, yea?</div>
-    <div class="body-text mt-3"> Or, it could be a section on the 21st Farm's page, see the menu bar from the home page.
-        Like, go back to home and click the dropdown button for "our Crew"
-    </div>
+    </div> -->
+    <!-- Working Carousel -->
+    <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../img/fttdinner.jpg" class="cimg d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../img/leaves.jpg" class="cimg d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../img/splashimg.jpg" class="cimg d-block w-100" alt="...">
+          </div>
+        </div>
+      </div> -->
+      <!-- End of Working Carousel -->
+    <div class="secthead centered" style="font-size:8rem!important" id="crew">our crew</div>
+
     <div class="container1">
         <div class="col1 colbio">
-            <div class="secthead m-5 lhead" align="center">
+            <div class="secthead m-5 lhead farmhand" style="font-size:5rem!important" align="center">
                 Leah
             </div>
-            <div class="leahb centered"><img src="../img/leahb.jpg"></div>
+            <div class="leahb centered"><img src="../img/crew/leahb.jpg" class="bio"></div>
             <p class="just-txt leahtxt">
                 Leah Dannar-Garcia grew up two doors to the west of the farm and played here as a kid; the experience
                 left her with a deep love of animals and the farming life. She spent her early adult years in New York
@@ -184,10 +192,10 @@
 
         </div>
         <div class="col2 colbio">
-            <div class="secthead m-5 rhead" align="center">
+            <div class="secthead m-5 rhead farmhand" style="font-size:5rem!important" align="center">
                 Ron
             </div>
-            <div class="ronb centered"><img src="../img/ronb.jpg"></div>
+            <div class="ronb centered"><img src="../img/crew/ronb.jpg" class="bio"></div>
             <p class="just-txt rontxt">The farm was built over a hundred years ago in 1916. Ron Garcia’s parents bought
                 the
                 place when he was a small boy back in 1950. Back then 21st Street was a dirt road and there were farms
@@ -208,6 +216,25 @@
                     thrilled to share it with the public and we invite you to make some of your own memorable stories
                     here,
                     too!</span><span onclick="myFunction1()" id="myBtn1" class="apricots">Read more</span></p>
+        </div>
+    </div>
+    <div class="container1">
+        <div class="col1 colbio">
+            <div class="secthead m-5 lhead farmhand" style="font-size:5rem!important"  align="center">
+                Kyle
+            </div>
+            <div class="leahb centered"><img src="../img/crew/kyleb.jpg" class="bio"></div>
+            <p class="just-txt leahtxt">
+                In addition to teaching high school environmental science, Kyle manages the behind the scenes operations of Firefly and Rise. He first joined the crew for the 2017 growing season. His favorite crop to grow is hot peppers.
+            </p>
+
+        </div>
+        <div class="col2 colbio">
+            <div class="secthead m-5 rhead farmhand" style="font-size:5rem!important"  align="center">
+                Tara
+            </div>
+            <div class="ronb centered"><img src="../img/crew/tarab.jpg" class="bio"></div>
+            <p class="just-txt rontxt">Tara first joined the Firefly crew for a growing season in 2017 before to pursue a ceramics apprenticeship in Washington. She leads the field growing team at both Firefly and Rise farm. In her free time she creates incredible ceramic pieces. Her favorite crop to grow is kale.
         </div>
     </div>
     <h1 id="grow">grow with Firefly Farm online</h1>
