--- a/events.html
+++ b/events.html
@@ -164,14 +164,10 @@
         </div>
         <div class="c3"><img class="plantsale sqr" src="../img/plant-sale.jpg"></div>
     </div>
-<<<<<<< HEAD
-    <div class="row1-5"></div>
-=======
 
->>>>>>> 15df0631654eb095c353416d0a7d2ef03a9e6a25
     <div class="row2">
 
-        <div class="c1"><img src="../img/fttdinner.jpg"></div>
+        <div class="c1"><img src="../img/dinnerbarn.jpg"></div>
         <div class="c2 centered">
             <div class="secthead inside-secthead inside-secthead-right" id="fttdinner" align="center">
                 summer farm-to-table dinners
@@ -187,7 +183,7 @@
     </div>
 
     <div class="row3">
-        <div class="c3"><img class="fttpic" src="../img/leaves.jpg"></div>
+        <div class="c3"><img class="fttpic" src="../img/leaffest.jpg"></div>
         <div class="c1 m-4">
             <div class="secthead inside-secthead inside-secthead-left" id="fallfest" align="center">
                 fall leaf festival
