--- a/rise.html
+++ b/rise.html
@@ -107,104 +107,26 @@
     </div> -->
 
 
-    <div class="body-text just-txt">Here we have some text about how excited we are to be partnering with Fidelity on
-        Rise Farm. Here we have some text about how excited we are to be partnering with Fidelity on Rise Farm. Here we
-        have some text about how excited we are to be partnering with Fidelity on Rise Farm. Here we have some text
-        about how excited we are to be partnering with Fidelity on Rise Farm. Here we have some text about how excited
-        we are to be partnering with Fidelity on Rise Farm.
+    <div class="body-text just-txt">Firefly is thrilled and honored to announce that Leah Dannar-Garcia has been enlisted by Fidelity Bank to launch a brand new urban agriculture venture.
     </div>
 
     <div class="row1">
 
         <div class="c2 centered" align="center">
             <div class="secthead inside-secthead inside-secthead-left" id="plantsale" align="center">
-                What is this section?
+                Rise Farm
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                What is going here? Give me any ideas.
-                What is going here? Give me any ideas.Firefly Farm proudly supports the local food community and
-                sustainable food production.<br>
-                <br>Grateful to be a place beloved by many,What is going here? Give me any ideas.What is going here?
-                Give me
-                any ideas.
-                What is going here? Give me any ideas.What is going here? Give me any ideas.What is going here? Give me
-                any ideas.
+                A <a href="https://www.kansas.com/entertainment/restaurants/dining-with-denise-neil/article249167675.html">new parking structure built by Fidelity Bank</a> near Market and English in downtown Wichita will open later this year and will be home to one of the largest roof-top farms in the midwest. The top floor of the new building will feature an approximately 15,000 square foot urban farm, a 204-panel solar farm, as well as an event space.<br /> <br /> 
+When construction wraps on the new space this fall, Rise Farm will provide abundant fresh produce year-round for an upcoming farm-to-table restaurant moving in on the ground floor, as well as for other area restaurants. As a green roof, the farm will also serve to lessen the urban heat island effect while curbing building energy costs and excess stormwater runoff. Most importantly, we are excited to be growing delicious nutritious food right where people eat it!
+<br /><br />Read more about this initiative from Fidelity Bank <a href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/">here</a>. 
 
             </p>
         </div>
         <div class="c3"><img class="plantsale sqr" src="../img/rise-replace.jpg"></div>
     </div>
-    <div class="row2">
 
-        <div class="c1"><img src="../img/fttdinner.jpg"></div>
-        <div class="c2 centered">
-            <div class="secthead inside-secthead inside-secthead-right" id="fttdinner" align="center">
-                What is this section? Going to be? Huh!?
-            </div>
-            <p class="just-txt body-text row-text row-text-right">What is going here? Give me any ideas.
-                What is going here? Give me any ideas.social media or join the e-newsletter list for
-                up-to-date info on all that's going on at Firefly Farm.What is going here? Give me any ideas.What is
-                going here? Give me
-                any ideas.
-                What is going here? Give me any ideas.What is going here? Give me any ideas.What is going here? Give me
-                any ideas..</p>
-        </div>
-    </div>
-    <div class="secthead">Down here these bios going to a new page, yea?</div>
-    <div class="container1">
-        <div class="col1 colbio">
-            <div class="secthead m-5 lhead" align="center">
-                Leah
-            </div>
-            <div class="leahb centered"><img src="../img/leahb.jpg"></div>
-            <p class="just-txt leahtxt">
-                Leah Dannar-Garcia grew up two doors to the west of the farm and played here as a kid; the experience
-                left her with a deep love of animals and the farming life. She spent her early adult years in New York
-                City. Later, she travelled and worked in countries around the world before returning to Wichita in 1998
-                and marrying the boy next door soon after.<span id="dots">...</span><span id="more"
-                    style="display: none;">
-                    She will never forget the persimmon groves she saw in Korea,
-                    the lady finger bananas she ate in Mexico, or the vineyards she toured in the Republic of Georgia.
-                    Those
-                    far away experiences had a great impact on her ideas about regional agriculture and cuisine. From
-                    the
-                    types of crops grown here, to the farmers’ markets, farm-to-table dinners, and public venue space,
-                    her
-                    vision is beginning to take shape. In the near future, it includes adding a u-pick operation and
-                    seasonal café. She gets little free time these days, but when she does, she enjoys music and the
-                    visual
-                    arts, hiking and kayaking in SE Kansas, and essay writing.</span><span onclick="myFunction()"
-                    id="myBtn" class="apricots">Read more</span>
-            </p>
-
-        </div>
-        <div class="col2 colbio">
-            <div class="secthead m-5 rhead" align="center">
-                Ron
-            </div>
-            <div class="ronb centered"><img src="../img/ronb.jpg"></div>
-            <p class="just-txt rontxt">The farm was built over a hundred years ago in 1916. Ron Garcia’s parents bought
-                the
-                place when he was a small boy back in 1950. Back then 21st Street was a dirt road and there were farms
-                all around. Over the years, Ron’s family had a milk cow, beef cattle, a few pigs, some sheep, lots of
-                chickens, hunting dogs, and barn cats.<span id="dots1">...</span><span id="more1"
-                    style="display: none;">
-                    Ron’s dad raised wheat and soy beans and of course, a great, big
-                    garden, too. His mom had some fruit trees and dill and garlic planted close to the back door, both
-                    of
-                    which survive to this day. In 1955, the Udall tornado took the barn and garage. Ron’s dad rebuilt
-                    both
-                    shortly afterward and they are still solid structures today. Ron ran a motorcycle dealership and
-                    repair
-                    shop here for over thirty years. He is retired now but is an honorary member of our farm team and
-                    contributes more than a little to the never ending job of fixing, repairing, and maintaining
-                    everything.
-                    Almost every corner of this old place has some kind of memorable story attached to it. Now, we are
-                    thrilled to share it with the public and we invite you to make some of your own memorable stories
-                    here,
-                    too!</span><span onclick="myFunction1()" id="myBtn1" class="apricots">Read more</span></p>
-        </div>
-    </div>
+   
     <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
